@@ -27,6 +27,7 @@ AUX llvm-3.2-nodoctargz.patch 1761 SHA256 e17494aef638d2fe3fb0b669516ffcc9e56016
 AUX llvm-3.3-R600_debug.patch 909 SHA256 84ebe63a557e3734dc8ed4545f098e2496d815e6bf4a99dfcb65d649a23d2c1b SHA512 cd1b92c713edf895ab7a15494c6092e44082b40b9bb5b0fdfdc438e919456c7fcafab9a840adb165c191454948c0b42bc78ce2b4d2cfbdf371917b16351c6928 WHIRLPOOL 0f08c58c78c1d04b8e701b0b817956a37271115c1fc83ea8f0f54bf965fbc659e418abf7f429c2a29581351050346cb783f0aa9147757d4cfdfa24fd8b28d09e
 AUX llvm-3.3-gentoo-install.patch 5321 SHA256 4f2e80f5567227e3539052a743ef0432f108d76e6fb9ba373dc51dbf159e0410 SHA512 90075d4bb5bdefb76bfb191dcb1b618de464434d9d084b2f99cc5034d33b112378f9aae1d289d30a2f8926132c17ea32ba1bf4049c3a61a418d37f903634b259 WHIRLPOOL 39b3ce4e937985483be7b4d19a37c0837b3c27f308f09fe8aee185b9fb43782b540f6b6be042b8f6dc4b5037be64284e2e233e65b3558e4b4eb1095a7d586a4f
 AUX llvm-3.3-insecure-rpath.patch 881 SHA256 27d893e5f551d245f15c01a94df81dd9ad069c2a980cf6a8860fb429eb37a5d8 SHA512 f03d1f522d0153fcbef677bf85202a6ddff408362d9ebc3e4f9f21814b43d28b033b0efb3ee86f5c11a4ac3a91b8afc80d022bddcd839ba503b29cf946e40218 WHIRLPOOL cfca8d189f88c0e26b4c3091db6c4267a90307c5728e64ee3ca55272a884389e56ed186904d9d66b44b870792eaae049cf6e66ee38efaf757655a4be4a0cec6e
+AUX llvm-3.3-r2-gentoo-install.patch.old 3428 SHA256 d8cd7b88b1b672f994fb2c9cc70a8957ea20e325273a1cfdbe4e8b84daf6a578 SHA512 35361b4cae95ee18c760208a81ea57e6474f890cd00dfe1fb04a527dec854e1de38fc12d219c06f14b8f99298c88f21fbee4ba5975b7c231f531bf607e386abe WHIRLPOOL cb01ab3a9c821d5b3ace0e5ac39a4998e96fbd1ee082965da01eddbeae45ce830085c3506475a536fcd8fc25cf731558a56d148c0779e3eaa717ed14397191f8
 AUX llvm-3.4-gentoo-install.patch 3528 SHA256 fa2de6dd186091b255832a9b5cb654edddd4c4a16f0f138357c813a40aa9a75b SHA512 e946e1fd422f49d2e150bd641bac0ffe6ea6757b2e6119465090a3c7f5cf69e17c00221bcf67a7fcf29628d93463fb1c57d0d009ff7834151440d779f2d33484 WHIRLPOOL 171f167802ee289716232e16a2c507e3b8dc7913b40df29c55a815ff88596871a1a970c891b0e9b361186cada4d8898e65920d014b4e6eb2178cc207f61bf6da
 AUX llvm-3.5-gentoo-install.patch 3204 SHA256 0c97173613505ea92f0aa79d4e04e797f1917fdc33b34daee05752bb52336d53 SHA512 f60b04f1fc7798f7869f3d80e4c163086c398e01b81220d60ccff42be5899fa036d5ab95257933e89e4c5efd04267a09015917c6a617b86b82d7ab4f5d0de221 WHIRLPOOL 81ce5835b9eb1fe1b162f35d6e37762cc8d613e67c5791f078ecd0e354a87eb92e52452bd6e9a7f70953dabea99d197786e87ed64dc802223149b8e97d6de265
 DIST cfe-3.3.src.tar.gz 9425539 SHA256 b1b55de4ab3a57d3e0331a83e0284610191c77d924e3446498d9113d08dfb996 SHA512 06773f43f7d3529f06edb029f7de398f06a700a0f2476e00c4727e70c291028221bfac23625dfd2c220d6ac91a21670848187a934b99a21801c695127371afcc WHIRLPOOL 8b97b527f19015dd3283b9e174615170e639793f64c635ccc4ee4d8216f8de759fd0121a8ef3513fa1c6ad19b31aa3529091ffb44a01ee858edfef400881596a
@@ -46,25 +47,25 @@ EBUILD llvm-3.1-r2.ebuild 6033 SHA256 9b9a587d30419fa646764a96e12fc6272f73f72461
 EBUILD llvm-3.2.ebuild 6534 SHA256 eb16cc91887fdb035722d268caaa3e4843825403786fcf74643be2c6f8099f11 SHA512 e781a4e4416a4acee667029744dab7f8e52022df4fcbb89d4d9acf855549f1c0a1661b79ee0067fd052a36bad278f08a2ff7f6e6e44d8c3ea7f82910ac573d9b WHIRLPOOL 115d13959a22867266dd7c0133109ccba063e97972cc2c807fb7a6dd7d3fbef1726caf314e262f6683a97a2c3a6ff776f808de7d80923472fc692554eccbca27
 EBUILD llvm-3.3-r1.ebuild 12007 SHA256 343a88ba35b67f4d86c20e29e1f4919640a9c4fbf9942fb1733945480ba1e8f5 SHA512 3db9e2ad26e803ac663b696ff615eed83a4342e4b771f161b74304bb83c61f171e02f2b176cf62663724206a57e20be52ec22cf49de234f72b32673bb2588512 WHIRLPOOL 1c423485f6161b40daa5a7ebdc38838b4bd2d6a9c540881eb3cfbf5f592b454da32758ad23c2607fe7a875c65891f7b64f3079a53ac77af5b2decb6490a6b8b4
 EBUILD llvm-3.3.ebuild 6798 SHA256 4e53042e76ce97e6a460cda74c5dbadc1cee9009345e8f0232e28d53c8f77579 SHA512 5513887c3b5a25a678713b68c216a40801ddecbf5a4dc58d7ad01c1ec8411589e20d8662c34f117e6d64924302504c8ce74b48f3edca1f292b56881eb6176271 WHIRLPOOL 79d6adefc281699477a271f76cb8eb7992d0946b6fcda9149a0976c30138ac882f735eff08c25c0edf37ccc8e31700f6d2d51d38c354c82c06695962e8f9243b
-EBUILD llvm-9999.ebuild 13026 SHA256 6a4a6ca368cc1ef2b888ace6860cd227ef163055b03a6df81f75d73b4e4fa488 SHA512 981870e6371cef6b2c00c4f3b6e964c6b055bca7653991adf21d05f9b2b9f807ed2b97d893fe828b4beb6310f96a921497068663dc47a3b463efec0c4f5a7d5a WHIRLPOOL 3daa394dc07f5337a5cb45ef2f32102b86ff0b37b74a11b4e54dfd1108b3a4fb932b6a09d7692cf8d604241df845dba4aa29afcceceb0bed9d47b02351fc6fab
-MISC ChangeLog 26464 SHA256 67328017a971d93e4bc1742fb55c22e983781537a3ea4934c07053bd11ab14c4 SHA512 e00710dd7df19851ba16832520c0c6f7c57f5bd6c667d62d91f078f940f4e795c973da3465f334e9d22f29e0a54a8d710a8fc45ceddc29345e17bd8730ba16f5 WHIRLPOOL 2c9ff75d9e74ac50dd3ca8eb5218a8cee205255d77bbc75421eb6234df484ede40e6db51de689761da1d045582fb012dacc6a7ac5ebdf38ce756ba943049a6ff
+EBUILD llvm-9999.ebuild 13167 SHA256 4c68b7655c08bb28b784a1fde982eb211e1c794dd82ac823f9cdf454684084b7 SHA512 5d9de71db741e6efd46d6b0261454f910a45ea1894a8e4337ac5dc50c5e34df4201ee5d2674498ddb483ad9dfa7a164776788d3222497d00159691c239ba36bd WHIRLPOOL 9f63c196c8b20e43b6cc2fdd15a1ce1c61c184218f7550da179fc3c7e37dd50ede2352978183ec4eaf47489ec9feae18db28782547c6bbef64151a5291dfcfea
+MISC ChangeLog 26622 SHA256 f194ddf229968fc7421c813653bc0128acccad656b29e59b53bced1e8f1f1780 SHA512 689599fbf60735638452de5ff803b0ba3b5c313657c9f1dd1c5cb03717d1075810f628a0c66e47c1e6674f5ff07237228b2723c1792a14caa32058287d6142ef WHIRLPOOL b7a84af7c49395f309353d063c1a81cbf1c7bdabd8d3bab4b3ad0433c9bb166496ea14aa781ac0e6830c5de792098093b0c21e0681926eea434efea4ce82c9da
 MISC metadata.xml 2723 SHA256 d1bbe72da2553592ad60522f744b8339bce17487343abf372d966c1fe9cd163d SHA512 800f72039a5f0fdb175a8ddab7ae8f184907865802ffd5f139006f3a8c77053f114e2f7b01cef3f41f6fffb3f8f8b2b474fdf95461f27b2dc8ae31cbd732a14e WHIRLPOOL 462d3d2f22e29d3678621a9f89ed98a58ee60fde57da7be21fbca7fd61e106abbcb19c0e491424869302c19ca93b15c480cd7ca2a3181f2148174d44e891e190
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCABmBQJSvZItXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJSvtnxXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOo/QP/11Y6wIRdKRaQoX3vDvaDHkP
-Bck/fdp2NPGKG18IaNKrnmAYWf3Rf3mBs05cuv29RJphDK0WubDTmlkjiARBe8O7
-qP4mvBv6eJ8lo/1rkr0Fg4hF4qyNLwASf9iDeyXc3dEVLD4DXChIBxncuIa7t2NP
-6T02a7tCchiLVe4Odi/83RiObc7OPEnuGu4C5/WtJguSz+cL+Lr5fP/TYMeIWkKC
-90VqY2vXJFz+pG3iUohuQDZfZAFytg9c/szYdTQFTYnYr5SNDjF06fFrdvLhUxdY
-dHGb9q0lVAJaa3EcKhsHs+fGLGPpLMkEfVnGhFTCNVaInqsBvFe4rTOvdSaLeukB
-4iLw9jcn+857QrUNc0fY2PVl4cLw+A19wJkmX9hx12oQjJgVmf/miR74IV+CC2H4
-NiCCGeQirmUVpWHq8SMN5U4pQsYvZTFUljef9NwUjAk/KXEUKYBjfGIuIO0gJ5xp
-ojj3E/uR7ghUD32xKh/fB+/NmUWMm/Ma8y7GYnKZwE19YzASKrUVIPvqtGbdyH/e
-yYgfRKyvJ9lx6hnbjQFvDSt3HbJMboLphqZu1v6o7imHA/F/pRhWb8TQy17az7wQ
-JkBpW94EnDYbhknFtMM+fcZbf2+GhY6T137X7aMxLMc2lL6eMxoMnRbqIeYICsng
-csaqsgr7J71gMnlO0c79
-=5S/p
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZO4BAP+wVIeaK+FFBd6E5uArxujJWF
+I9GG4k+3WxeZ0I+9ci2M8yUUGjRn9CBNC+mOAFt4tCpmVoNxotAZ2dHwMr1GG4sz
+LiBMJhlOf4HCDuSYV9CFqRmjWtbmdRpY+dZlr18qak4xqqeoD7a7NWxDVCXuDVfh
+Pl5nXdBZS5jQ5BsZMYbQjMXwlR2OhKRGxf2EXP9pMemYMrTY7q8cWGHlb9MA17LC
+U8VA2JffKAKv9JHU+TgmejsPdR3J+f+d/upF3eoF/NluZvhrcX7KfQmxryIOGk2e
+bEnq1dejghRerw9ygmXf98Eo1GsUfihLfRTiZ7nTTjCw1rQujN2fejnIlhVY7VyA
+GvWWFjhEi7JNgtu2RlASwXgwSmwk/0lXNUbTt6bgTXHQNw+X4zdaIe94ELq6s2Ph
+gA+PgbYjduEywHdv/jwPbqkyt6VIUB01uxiAC7hsfByID9i6L9Udtgco9jaRvsxE
+ynqy8tYZetMTU2j0tNxUfEDoVpFWKfDFnZL5zvrcFRIfBCFzD4cBmHwMDXQOl3u+
+oFNajSZv3iK6vjNWdVCvcbw/XcQ/Gfy5p0Pu1kdSQur1YXyrTchZ7uIJq5XIP3M4
+H3GSTxP4bPQJPW8mxO8nI4sGAPcm3iemyHlryXzkSk1TKkv7N0z+KyQtFerGLSYR
+DpE+hG+9ElrigA81xna2
+=h1n7
 -----END PGP SIGNATURE-----
